tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generic_used_in_nested_type_fails/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type, found numeric generic
  ┌─ src/main.nr:7:16
  │
7 │         inner: N
  │                - not a type
  │

Aborting due to 1 previous error
