tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generic_used_in_nested_type_fails/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type, found numeric generic
  ┌─ src/main.nr:7:16
  │
7 │         inner: N
  │                - not a type
  │

Aborting due to 1 previous error
